force-app/main/default/objects/FinServ__B2CLeadToOpportunityMapping__mdt/FinServ__B2CLeadToOpportunityMapping__mdt.object-meta.xml
<CustomObject>
    <description
  >Defines mapping between Lead record type to Opportunity record type. It is primarily meant for B2C Lead record types.</description>
    <label>B2C Lead To Opportunity Mapping</label>
    <pluralLabel>B2C Lead To Opportunities Mappings</pluralLabel>
</CustomObject>