force-app/main/default/objects/FinServ__B2CLeadToOpportunityMapping__mdt/fields/FinServ__OpportunityRecordType__c.field-meta.xml
<CustomField>
    <fullName>FinServ__OpportunityRecordType__c</fullName>
    <description>Indicates record type of the Opportunity record.</description>
    <label>Opportunity Record Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>