force-app/main/default/objects/FinServ__B2CLeadToOpportunityMapping__mdt/fields/FinServ__OpportunityRecordTypeNamespace__c.field-meta.xml
<CustomField>
    <fullName>FinServ__OpportunityRecordTypeNamespace__c</fullName>
    <description
  >Indicates namespace of the Opportunity record type</description>
    <label>Opportunity Record Type Namespace</label>
    <length>100</length>
    <type>Text</type>
</CustomField>